<?xml version="1.0" encoding="utf-8"?>
<!--
 Trig For Calculus: Reference App for Trigonometric Derivatives and Integrals
 Copyright (C) 2013 Marcus Fedarko
 Contact Email: marcus.fedarko@gmail.com

 This file is part of Trig For Calculus.
 
   	 Trig For Calculus is free software: you can redistribute it and/or
  modify it under the terms of the GNU General Public License as published
  by the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Trig For Calculus is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Trig For Calculus.  If not, see <http://www.gnu.org/licenses/>.
  
  The full text of the GNU General Public License version 3 can be found in the
  source code root directory as COPYING.txt.
-->
<resources>

    <string name="app_name">Trig For Calculus</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="divider_gray">#777777</color>

    <!-- Regular Trig Main Screen stuff -->

    <string name="mainScreenTitle">Regular Trigonometric Functions</string>
    <string name="DerivativesButton">Trig Derivatives</string>
    <string name="IntegralsButton">Trig Integrals</string>

    <!-- Inverse Trig Main Screen stuff -->

    <string name="atMainScreenTitle">Inverse Trigonometric Functions</string>
    <string name="atDerivativesButton">Arctrig Derivatives</string>
    <string name="atIntegralsButton">Arctrig Integrals</string>

    <!-- Regular Integrals Screen stuff -->

    <string name="title_activity_regular_integrals">Trig For Calculus</string>
    <string name="title_activity_regular_derivatives">Trig For Calculus</string>
    <string name="title_activity_arctrig_derivatives">Trig For Calculus</string>
    <string name="title_activity_arctrig_integrals">Trig For Calculus</string>
    <string name="imageErrorText">Error: Image with requested formulae cannot be obtained.</string>
    <string name="title_activity_about">Trig For Calculus</string>

    <!-- About Screen stuff -->
    <string name="menu_about">About</string>
    <string name="aboutTitle">About</string>
    <string name="versionNumberAndDate">Version 1.0 &#8722; December 26, 2013</string>
    <string name="acknowledgmentsTitle">Acknowledgments</string>
    <string name="acknowledgmentsInfo">\tThe images of formulae in Trig For Calculus were generated using <a href="https://www.libreoffice.org/features/math/">LibreOffice Math</a>. Thanks to <a href="http://www.documentfoundation.org/">The Document Foundation</a> for such a great suite of products!</string>
    <string name="sourceCodeTitle">Source Code</string>
    <string name="sourceCodeInfo">\tTrig For Calculus is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\n\tTrig For Calculus is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\n\tYou can find the full source code for Trig For Calculus here:\n\n\t<a href="https://github.com/fedarko/TrigForCalculus">https://github.com/fedarko/TrigForCalculus</a>\n\n\tYou can find a full copy of the GNU General Public License version 3 included in the source code root directory as COPYING.txt, and you can also find a copy at:\n\n\t<a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a></string>
    <string name="authorTitle">Author</string>
    <string name="authorInfo">\t<b>Trig For Calculus</b> was designed and programmed by Marcus Fedarko. If you have any questions, comments, concerns, or anything else, feel free to contact him at mfedarko.apps@gmail.com.\n\n\tYou can check out Marcus\' other apps on the Google Play store here:</string>
	<string name="otherAppsButton">Other Apps</string>
</resources>